--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN" style="font-size: ;">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN">
 <head>
     {% load html_tools %}
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="keywords" content="深圳大学,深大,荔园,学子天地">
-    <meta name="description" content="深圳大学学子天地是深大最大的校园传媒网站，致力于为深大学子提供有价值的资讯和服务。">
-    <link href="images/stulogo.png" type="image/x-icon" rel="shortcut icon" />
-    {% block htmltitle %}
-    <title>深圳大学学子天地</title>
-    {% endblock %}
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Language" content="zh-CN" />
+    {% block htmltitle %}<title>深圳大学学子天地</title>{% endblock %}
     {% block keywords %}{% endblock %}{% block description %}{% endblock %}
-    <link href="/static/styles/global4phone.css" rel="stylesheet" type="text/css" media="screen and (max-width:767px)" />  
-    <link href="/static/styles/global4pc.css" rel="stylesheet" type="text/css" media="screen and (min-width:768px)" />
-   
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="HandheldFriendly" content="true" />
+    <link href="/static/images/stulogo.png" type="image/x-icon" rel="shortcut icon" />
     <!--[if IE]>
     {{ 'ie-fix.css' | as_css }}
     <![endif]-->
-    {{ 'plugins/jquery.min.js' | as_js }}      
-    {{ 'plugins/jquery.form.js' | as_js}}
+    {{ 'plugins/jquery.min.js' | as_js }}
     {{ 'plugins/jquery.tools.min.js' | as_js }}
-    {{ 'plugins/jquery.lazyload.min.js' | as_js }}
     {{ 'plugins/jquery.form.js' | as_js}}
-    {{ 'global/globals.js' | as_js}}
-    {{ 'global/chromeCookie.js' | as_js }}
+    {{ 'plugins/jquery.lazyload.min.js' | as_js }}
+    {{ 'ga.js' | as_js }}
+    {{ 'global.js' | as_js }}
+    {{ 'chromeCookie.js' | as_js }}
+    {{ 'cookie.js' | as_js }}
+
+    {{ 'message-box.css' | as_css }}
+    {{ 'bases.css' | as_css }}
+    {{ 'globals.js' | as_js }}
+
+    <!--[if lte IE 8]>
+    {{ 'plugins/respond.min.js' | as_js }}
+    <![endif]-->
+    
     {% block htmlhead %}
     {% endblock %}
 </head>
 <script type="text/javascript">
     $(function(){
-
         $("img").each(function() {
             var original = $(this).attr("src");
             $(this).attr("data-original", original)
@@ -40,96 +44,67 @@
         $("img.lazy").lazyload({
             effect : "fadeIn"
        }); 
-
     });
 </script>
 <body>
 
 <div class="inner_body">
-{% block header %}
-<div class="header-phone">
-            <a id="menu_call" href="javascript:void(0)" onclick="sidebaropen();">
-                <img src="/static/images/index/menu_call.png" alt="nav" />
-            </a>
-            <p>深圳大学学子天地</p>
-        </div>
-        <div class="header-pc">
-            <div class="header-secshadow"></div>
-            <ul>
-                <li><a class="nav-active" id="nav0" href="/" onclick="navcome(0);">学子首页</a></li>
-                <li><a id="nav1" href="{% url 'lecture:index' %}" onclick="navcome(1);">深大讲座</a></li>
-                <li><a id="nav2" href="{% url 'activity:index' %}" onclick="navcome(2);">活动预告</a></li>
-                <li><a id="nav3" href="{% url 'articles:list' 'photography' %}" onclick="navcome(3);">深大摄影</a></li>
-                <li ><a id="nav4" href="http://stu.szu.edu.cn:8080" rel="nofollow" onclick="navcome(4);">服务专区</a></li>
-                <li class="now"></li>
+        <div class="header-phone">
+        <a id="menu_call" href="javascript:void(0)" onclick="sidebaropen();">
+            <img src="/static/images/index/menu_call.png" alt="nav" />
+        </a>
+        <p>深圳大学学子天地</p>
+    </div>
+    <div class="header-pc">
+        <div class="header-secshadow"></div>
+        <ul>
+            <li><a class="nav-active" id="nav0" href="javascript:void(0)" onclick="navcome(0);">学子首页</a></li>
+            <li><a id="nav1" href="javascript:void(0)" onclick="navcome(1);">深大讲座</a></li>
+            <li><a id="nav2" href="javascript:void(0)" onclick="navcome(2);">活动预告</a></li>
+            <li><a id="nav3" href="javascript:void(0)" onclick="navcome(3);">深大摄影</a></li>
+            <li ><a id="nav4" href="javascript:void(0)" onclick="navcome(4);">服务专区</a></li>
+            <li class="now"></li>
+        </ul>
+    </div>
+
+    <div class="sidebar">
+        <div class="sidebar-main">
+            <div class="sidebar-top">
+                <div class="sidebar-blur"></div>
+                <img class="pchomepic" src="/static/images/coverphoto/festival.jpg" />
+                <p class="stucampus_name">学子天地</p> 
+                <p class="stuc_description">深大第一学生门户网站</p>
+            </div>
+
+            <ul class="nav1">
+                <li><a href="/"><img src="/static/images/index/home_48.png" alt="icon" />学子首页</a></li>
+                <li><a href="javascript:void(0)"><img src="/static/images/index/photo_48.png" alt="icon" />深大摄影</a></li>
+                <li><a href="javascript:void(0)"><img src="/static/images/index/people_48.png" alt="icon" />深大人物</a></li>
+                <li><a href="javascript:void(0)"><img src="/static/images/index/interesting_48.png" alt="icon" />趣物志</a></li>
+                <li><a href="javascript:void(0)"><img src="/static/images/index/news_48.png" alt="icon" />新闻和通知</a></li>
+            </ul>
+            <hr />
+            <ul class="nav2">
+                <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />深大导航</a></li>
+                <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />最新评论</a></li>
+                <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />最近访客</a></li>
+                <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />合作社团</a></li>
+                <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />火车订票</a></li>
             </ul>
         </div>
+        <div class="call-back" onclick="sidebarclose();"></div>
+    </div>
 
-        <div class="sidebar">
-            <div class="sidebar-main">
-                <div class="sidebar-top">
-                    <div class="sidebar-blur"></div>
-                    <img class="pchomepic" src="http://stu.szu.cn/static/images/coverphoto/festival.jpg" />
-                    <p class="stucampus_name">学子天地</p> 
-                    <p class="stuc_description">深大第一学生门户网站</p>
-                </div>
-
-                <ul class="nav1">
-                    <li><a href="/"><img src="/static/images/index/home_48.png" alt="icon" />学子首页</a></li>
-                    <li><a href="{% url 'articles:list' 'photography' %}"><img src="/static/images/index/photo_48.png" alt="icon" />深大摄影</a></li>
-                    <li><a href="{% url 'articles:list' 'people' %}"><img src="/static/images/index/people_48.png" alt="icon" />深大人物</a></li>
-                    <li><a href="{% url 'articles:list' 'interesting' %}"><img src="/static/images/index/interesting_48.png" alt="icon" />趣物志</a></li>
-                    <li><a href="{% url 'articles:list' 'news' %}"><img src="/static/images/index/news_48.png" alt="icon" />新闻和通知</a></li>
-                </ul>
-                <hr />
-                <ul class="nav2">
-                    <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />深大导航</a></li>
-                    <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />最新评论</a></li>
-                    <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />最近访客</a></li>
-                    <li><a href="javascript:void(0)"><img src="/static/images/index/comment_48.png" alt="icon" />合作社团</a></li>
-                    <li><a href="http://192.168.2.113/"><img src="/static/images/index/comment_48.png" alt="icon" />火车订票</a></li>
-                </ul>
-            </div>
-            <div class="call-back" onclick="sidebarclose();"></div>
-        </div>
-
-        <a href="javascript:void(0)" class="fixed-logo" onclick="hiddenthings()">
-            <img src="/static/images/index/stucampus_logo100px.png" alt="" />
-        </a>
-        <div class="banner">
-            <div class="selector">
-                <a class="round1 active" href="javascript:void(0)" onclick="bannerselect(0);"></a>
-                <a class="round2" href="javascript:void(0)" onclick="bannerselect(1);"></a>
-                <a class="round3" href="javascript:void(0)" onclick="bannerselect(2);"></a>
-                <a class="round4" href="javascript:void(0)" onclick="bannerselect(3);"></a>
-            </div>
-            <div id="banners" class="b-container" style="left: 0px;">
-            {% for nav_display_column in nav_display_columns %}
-           
-                <a id="banner{{ forloop.counter }}" href="{% url 'articles:display' nav_display_column.pk %}" style="left: 0rem;" >
-                    <div class="blur">
-                    </div>
-                    <p class="banner_title">{{ nav_display_column.title | truncatechars:19 }}</p>
-                    <p class="banner_describe">{{ nav_display_column.summary }}</p>
-                    <img src="{{ nav_display_column.cover }}" alt="banner1" />
-                    <p class="banner_category">{{ nav_display_column.category }}</p>
-                </a>
-            {% endfor %}
-                
-            </div>
-        </div>
-</div>
-
+    <a href="javascript:void(0)" class="fixed-logo">
+        <img src="/static/images/stucampus_logo.png" alt="" />
+    </a>
+{% block header %}
 {% endblock %}
 
 {% block content %}
 {% endblock %}
 
-
-
-
-
-
+</div><!--end of inner_body-->
 
 </body>
 </html>
