--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block description %}
-
+<meta name="description" content="深圳大学学子天地是深大最大的校园传媒网站，致力于为深大学子提供有价值的资讯和服务。">
 {% endblock %}
 
 {% block htmlhead %}
@@ -18,10 +18,6 @@
 {% endblock %}
 
 {% load py_utils %}
-
-{% block header %}
-
-{% endblock %}
 
 {% block content %}
     <div class="banner">
