--- a/stucampus/static/styles/articles/article-phone.css
+++ b/stucampus/static/styles/articles/article-phone.css
@@ -194,6 +194,7 @@ body{
 }
 .artical-text img{
     max-width: 90%;
+    height: auto !important;
 }
 .artical-foot{
     margin-top: 1.5rem;
@@ -204,7 +205,7 @@ body{
 .artical-foot hr{
     position: absolute;
     top: 4.4rem;
-    height: 0.066667rem;
+    height: 1px;
     width: 100%;
     background-color: rgba(0,0,0,0.08);
 }
@@ -312,7 +313,7 @@ body{
 .comment-main{
     margin: 1.066667rem auto;
     width: 21.8rem;
-    padding: 0.6rem 1.6rem;
+    padding: 0 1.6rem;
     background-color: #FDFDFD;
     overflow: hidden;
     box-shadow: 0rem 0.1rem 0.1rem rgba(0,0,0,0.16);
